[package]
name = "kernel"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
bitflags = "1.3.2"
buddy_system_allocator = "0.9"
cfg-if = "1.0"
log = "0.4"
numeric-enum-macro = "0.2.0"
spin = "0.9"
xmas-elf = "0.8"

# device driver dependencies
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5", optional = true }
axi-ethernet = { git = "https://github.com/zflcs/axiethernet.git", optional = true }
# axidma = { path = "../crates/axidma", optional = true }
axidma = { path = "../axidma", optional = true }
# tCore crates (private)
errno = { path = "../crates/errno" }
id-alloc = { path = "../crates/id-alloc" }
kernel-sync = {  git = "https://github.com/tkf2019/kernel-sync" }
signal-defs = { path = "../crates/signal-defs" }
syscall-interface = { path = "../crates/syscall" }
time-subsys = { path = "../crates/time-subsys" }
ubuf = { path = "../crates/ubuf" }
vdso = { path = "../crates/vdso", features = ["kernel"] }
executor = { path = "../crates/executor" }


# [target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

mm-rv = { path = "../crates/mm-rv" }
uintr = { path = "../crates/uintr", optional = true }

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
embedded-hal = "=1.0.0-alpha.4"
# lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }
nb = "1.0.0"
array-init = "2.0.0"
heapless = "0.7.5"
vfs = { path = "../crates/vfs" }
crossbeam = {version = "0.8", features = ["alloc"], default-features = false }



[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns"
]


[features]
board_qemu = ["virtio-drivers", "uintr"]
board_axu15eg = ["axi-ethernet", "axidma", "uintr"]

default = ["board_axu15eg"]

[build-dependencies]
serde_derive = "1.0"
serde = "1.0"
toml = "0.5.9"


