[package]
name = "os"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
spin = { version = "0.9", features = ["use_ticket_mutex"] }
xmas-elf = "0.7.0"
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
uart8250 = { version = "0.5.0", features = ["fmt"], optional = true }
uart_xilinx = { version = "*", features = ["fmt"], optional = true }
embedded-hal = "=1.0.0-alpha.4"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "a35c6e6", optional = true }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }
nb = "1.0.0"
array-init = "2.0.0"
heapless = "0.7.5"
lib_so = { path = "../lib_so", features = ["kernel"] }
# axi-ethernet = { git = "https://github.com/zflcs/axiethernet.git", optional = true }
# axidma = { path = "../axidma", optional = true }
axi-ethernet = { path = "../../axi-ethernet", optional = true }
axi-dma = { path = "../../axi-dma", optional = true }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
kernel-sync = {  git = "https://github.com/tkf2019/kernel-sync" }

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns",
  "async"
]


[features]
board_qemu = ["uart8250", "virtio-drivers"]
board_axu15eg = ["uart_xilinx", "axi-ethernet", "axi-dma"]
ktut = []                   # kernel-thread & user thread
kcut = []                   # kernel-coroutine & user thread
ktuc = []                   # kernel-thread & user coroutine
kcuc = []                   # kernel-coroutine & user coroutine

default = ["board_qemu", "kcut", "ktuc"]

[build-dependencies]
serde_derive = "1.0"
serde = "1.0"
toml = "0.5.9"


