[package]
name = "os"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang = { path = "../lang", features = ["kernel"] }
bitflags = "2.4.1"
buddy_system_allocator = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = "0.10"
spin = "0.9"
xmas-elf = "0.9.1"
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5", optional = true }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }
nb = "1.0.0"
array-init = "2.0.0"
heapless = "0.8.0"
# axi-ethernet = { git = "https://github.com/zflcs/axiethernet.git", optional = true }
# axidma = { path = "../axidma", optional = true }
axi-ethernet = { path = "../../axi-ethernet", optional = true }
axi-dma = { path = "../../axi-dma", optional = true }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
executor = { path = "../executor" }

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns",
  "async"
]


[features]
board_qemu = ["virtio-drivers"]
board_axu15eg = ["axi-ethernet", "axi-dma"]
ktut = []                   # kernel-thread & user thread
kcut = []                   # kernel-coroutine & user thread
ktuc = []                   # kernel-thread & user coroutine
kcuc = []                   # kernel-coroutine & user coroutine

default = ["board_qemu", "kcut", "ktuc"]

[build-dependencies]
serde_derive = "1.0"
serde = "1.0"
toml = "0.8.8"


