[package]
name = "sharedscheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
riscv = "0.10"
spin = "0.9"
buddy_system_allocator = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10"
xmas-elf = "0.8"
log = "0.4"
user_syscall = { path = "../crates/user_syscall" }

executor ={ path = "../crates/executor"}

