[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9.4"
bitflags = "1.2.1"

syscall_macro = {path = "./syscall_macro"}

[workspace]
members = ["syscall_macro"]
