[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = ["inline-asm"] }
spin = "0.9"
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }

embedded-hal = "=1.0.0-alpha.4"
nb = "1.0.0"
array-init = "2.0.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.3"
heapless = "0.7.5"
blake2 = { version = "0.10", default-features = false }
blake3 = { version = "1.2.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
executor = { path = "../crates/executor" }
vdso = { path = "../crates/vdso" }
time-subsys = { path = "../crates/time-subsys"}
user_syscall = { path = "../crates/user_syscall" }


[features]
board_qemu = []
board_axu15eg = []
