[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
buddy_system_allocator = "0.9.0"
riscv = "0.10.0"
spin = "0.9"
nb = "1.0.0"
array-init = "2.0.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.3"
heapless = "0.8.0"
blake2 = { version = "0.10", default-features = false }
blake3 = { version = "1.2.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
syscall = { path = "../syscall" }
lang = { path = "../lang", features = ["not_kernel"] }
executor = { path = "../executor" }
log = "0.4.17"

macros = {path = "./macros"}

