[package]
name = "vdso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.8.0"

executor = { path = "../executor" }
vdso_macro ={ path = "./vdso_macro"}
log = "0.4"


[features]
kernel = []