[package]
name = "sharedscheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spin = { version = "0.9", features = ["use_ticket_mutex"] }
syscall = { path = "../../syscall" }
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.9.0"
log = "0.4"
heapless = {version = "0.7.5", features = ["mpmc_large"]}
config = { path = "../../config" }
basic = { path = "../basic", features = ["inner"] }
